Added doc strings..

--- a/Workshop0.ipynb
+++ b/Workshop0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "generative_ai_disabled": true,
-      "authorship_tag": "ABX9TyNcfHum82B2ojQxzvAd3bpn",
+      "authorship_tag": "ABX9TyNar1sPUD9i0qVOamyA9jmO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,7 @@
         "id": "f5v-IoAgZHiU",
         "outputId": "6f637c7a-c6d1-48af-9b21-fc26ff873f9d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "eRCKHplrZK8y",
         "outputId": "372c067d-2975-4b5b-fbe6-8df47e93bb4b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
         "id": "rkpmQqmcZSuq",
         "outputId": "590857bb-d4a2-46a3-ed12-afeffcd6a466"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -231,8 +231,7 @@
         "\n",
         "    return total\n",
         "\n",
-        "print(sum_nested_list([1, [2, [3, 4], 5], 6, [7, 8]]))\n",
-        ""
+        "print(sum_nested_list([1, [2, [3, 4], 5], 6, [7, 8]]))\n"
       ],
       "metadata": {
         "colab": {
@@ -241,7 +240,7 @@
         "id": "_fHMVyKVZnvr",
         "outputId": "c1ea5f7d-ca43-4e39-ae86-83675ebfea8a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,6 +255,20 @@
       "cell_type": "code",
       "source": [
         "def generate_permutations(s):\n",
+        "  '''\n",
+        "  generate all possible combinations of a string.\n",
+        "\n",
+        "  This function uses recursive approach. For each character in the string, it removes the character and generates all combination\n",
+        "  of the remaining sub-string/ remaining characters. It then adds the removes character to each of the generated permutations of the sub-string.\n",
+        "  The process repeats until the base case is met and until there is only a single character in the string.\n",
+        "\n",
+        "  param: type(string)\n",
+        "        string input to create combinations of it.\n",
+        "\n",
+        "\n",
+        "  return: type(list)\n",
+        "        list of string with all the possible combinations of the input string\n",
+        "  '''\n",
         "    result = []\n",
         "    if len(s) == 1:\n",
         "        return [s]\n",
@@ -281,7 +294,7 @@
         "id": "i8lGo6g1ZrRG",
         "outputId": "c901882c-3e12-4560-a41a-5cc7083f9c37"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,6 +309,18 @@
       "cell_type": "code",
       "source": [
         "def calculate_directory_size(directory):\n",
+        "  '''\n",
+        "  Calculate the size of the given directory\n",
+        "\n",
+        "  This function uses recursive approach. It checks if the value has a dictionary inside it or not. If it does, it returns the value to itself\n",
+        "  and if it doesn't, it simply adds it to total.\n",
+        "\n",
+        "  param: type(dictionary)\n",
+        "        takes the directory information as dictionary as an input.\n",
+        "\n",
+        "  return: type(integer)\n",
+        "        returns the total size of the directory\n",
+        "  '''\n",
         "    total = 0\n",
         "    for item, value in directory.items():\n",
         "        if isinstance(value, dict):\n",
@@ -321,8 +346,7 @@
         "            \"file6.txt\": 150\n",
         "        }\n",
         "    }\n",
-        "print(calculate_directory_size(directory_structure))\n",
-        ""
+        "print(calculate_directory_size(directory_structure))\n"
       ],
       "metadata": {
         "colab": {
@@ -331,7 +355,7 @@
         "id": "4s26QCPQZv1j",
         "outputId": "088abb2c-62ae-4cac-815e-4cd85d48b823"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,13 +369,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. Write a function min_coins(coins, amount) that:\n",
-        "# • Uses DP to calculate the minimum number of coins needed to make up the\n",
-        "# amount.\n",
-        "# 2. Test with coins = [1, 2, 5] and amount = 11. The result should be 3 (using coins\n",
-        "# [5, 5, 1]).\n",
-        "\n",
         "def min_coins(coins, amount):\n",
+        "  '''\n",
+        "  Find the minimum number of coins to make the given amount.\n",
+        "\n",
+        "  This program uses dynamic programming approach. It tries to meet the amount value from the least number of coins.\n",
+        "\n",
+        "  params:\n",
+        "        param1: type(list) -> list of the available coins to meet the amount\n",
+        "        param2: type(int) -> amount to meet\n",
+        "\n",
+        "  return:\n",
+        "        the fewest number of coins required to meet the amount\n",
+        "        if not possible, returns -1\n",
+        "  '''\n",
         "    inf = float('inf')\n",
         "    dp = [inf] * (amount + 1)\n",
         "    dp[0] = 0\n",
@@ -371,7 +402,7 @@
         "id": "r06yt-7aZ4zI",
         "outputId": "61d39aaa-4bad-4c69-a6a6-aa069d1fb724"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,8 +425,19 @@
         "\n",
         "\n",
         "def longest_common_subsequence(s1, s2):\n",
-        "    n, m = len(s1), len(s2)\n",
+        "  '''\n",
+        "  This function uses dynamic approach to find the longest common subsequence between the two string.\n",
+        "  A subsequence is a sequence of characters that appear in the same order in both the strings, not necessarily next to each other.\n",
         "\n",
+        "  Params:\n",
+        "        param1: type(string) -> first string value\n",
+        "        param2: type(string) -> second string value\n",
+        "\n",
+        "  Return: type(int)\n",
+        "        the length of the longest common sequence\n",
+        "  '''\n",
+        "\n",
+        "    n, m = len(s1), len(s2)\n",
         "    dp = [[0] * (m + 1) for _ in range(n + 1)]\n",
         "\n",
         "    for i in range(1, n + 1):\n",
@@ -407,22 +449,22 @@
         "\n",
         "    return dp[n][m]\n",
         "\n",
-        "print(longest_common_subsequence(\"abcdef\", \"acef\"))"
+        "print(longest_common_subsequence(\"abcdef\", \"aecf\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FLz4i7X-Z8cc",
-        "outputId": "6d905a1b-f880-4431-e0f4-d1fe224f0fa4"
+        "outputId": "4b78b864-dfce-42d5-a398-809f2217f3d2"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4\n"
+            "3\n"
           ]
         }
       ]
@@ -431,20 +473,34 @@
       "cell_type": "code",
       "source": [
         "def knapsack(weights, values, capacity):\n",
-        "    n = len(weights)\n",
+        "  '''\n",
+        "  This function uses dynmaic programming to find the max total value without exceeding the capacity.\n",
         "\n",
-        "    dp = [[0] * (capacity + 1) for _ in range(n + 1)]\n",
-        "    for i in range(1, n + 1):\n",
-        "        for w in range(capacity + 1):\n",
-        "            if weights[i - 1] <= w:\n",
-        "                dp[i][w] = max(dp[i - 1][w], dp[i - 1][w - weights[i - 1]] + values[i - 1])\n",
-        "            else:\n",
-        "                dp[i][w] = dp[i - 1][w]\n",
+        "  Params:\n",
+        "        param1: type(list) -> The weights of the items\n",
+        "        param2: type(list) -> The values of the items\n",
+        "        param3: type(int) -> The maximum that can be carried\n",
         "\n",
-        "    return dp[n][capacity]\n",
+        "  Return: type(int)\n",
+        "        maximum total value that can fit within the capacity\n",
         "\n",
+        "  '''\n",
+        "  n = len(weights)\n",
+        "  dp = [[0] * (capacity + 1) for _ in range(n + 1)]\n",
         "\n",
-        "print(knapsack([1, 3, 4, 5],[1, 4, 5, 7],7))"
+        "  for i in range(1, n + 1):\n",
+        "      for w in range(capacity + 1):\n",
+        "          if weights[i - 1] <= w:\n",
+        "              dp[i][w] = max(\n",
+        "                  dp[i - 1][w],\n",
+        "                  dp[i - 1][w - weights[i - 1]] + values[i - 1]\n",
+        "              )\n",
+        "          else:\n",
+        "              dp[i][w] = dp[i - 1][w]\n",
+        "\n",
+        "  return dp[n][capacity]\n",
+        "\n",
+        "print(knapsack([1, 3, 4, 5], [1, 4, 5, 7], 7))"
       ],
       "metadata": {
         "colab": {
@@ -453,7 +509,7 @@
         "id": "yqjVWQzTaDVL",
         "outputId": "ec33d6c1-e0b1-449d-84f9-99fd5b086e93"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
