Fixed the error.

--- a/Worksheet2.ipynb
+++ b/Worksheet2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Hy3J11C3609JS6gNgmkwoZBd0qnsdq5D",
-      "authorship_tag": "ABX9TyPjLBBmMgjiJ5wFjXfoMk2O",
+      "authorship_tag": "ABX9TyMxt8a8bq9SdRR64rFNw2e7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -439,20 +439,20 @@
         "\n",
         "df_null = df.columns[df.isnull().any()]\n",
         "\n",
-        "print(\"null value list: \", list[df_null])\n",
+        "print(\"null value list: \", list(df_null))\n",
         "\n",
         "df[\"Student ID\"] = df[\"Student ID\"].ffill() + 1  # student id must be unique, hence increased the missing value with the value before it.\n",
-        "df[\"Age\"] = df[\"Age\"].fillna(df[\"Age\"].median(), inplace=True)  # age is median as age may contain outliers that may make the central tendency skewed\n",
-        "df[\"Gender\"] = df[\"Gender\"].fillna(\"Unknown\", inplace=True)  # some people might not be comfortable sharing their gender, hence written unknown\n",
-        "df[\"Height\"] = df[\"Height\"].fillna(df[\"Height\"].mean(), inplace=True)  # mean chosen because less chance of outliers, hence normal skewness\n",
-        "df[\"Weight\"] = df[\"Weight\"].fillna(df[\"Weight\"].mode()[0], inplace=True)  # mode chosen because it represents many people of the same weight. [0] given as mode can be of many values, so take the first mode.\n",
-        "df[\"Blood Type\"] = df[\"Blood Type\"].fillna(df[\"Blood Type\"].mode()[0], inplace=True) # mode used to fill because max people have the same blood type.\n",
-        "df[\"BMI\"] = df[\"BMI\"].fillna(df[\"BMI\"].median(), inplace=True)  # meadian chosen because there might contain outliers\n",
-        "df[\"Temperature\"] = df[\"Temperature\"].fillna(df[\"Temperature\"].median(), inplace=True) # median chosen because some may be outliers\n",
-        "df[\"Heart Rate\"] = df[\"Heart Rate\"].fillna(df[\"Heart Rate\"].mean(), inplace=True)  #mean chosen because heart rate of every person is average at most times\n",
-        "df[\"Cholestrol\"] = df[\"Cholesterol\"].fillna(df[\"Cholesterol\"].mode()[0], inplace=True) # mode chosen because taking the most common approach\n",
-        "df[\"Diabetes\"] = df[\"Diabetes\"].fillna(df[\"Diabetes\"].mode()[0], inplace=True) # median chosen because some people might be outliers\n",
-        "df[\"Smoking\"] = df[\"Smoking\"].fillna(df[\"Smoking\"].mode()[0], inplace=True) # mode chosen because people either smoke or not and there is no such thing called average/half smoking\n",
+        "df[\"Age\"] = df[\"Age\"].fillna(df[\"Age\"].median())  # age is median as age may contain outliers that may make the central tendency skewed\n",
+        "df[\"Gender\"] = df[\"Gender\"].fillna(\"Unknown\")  # some people might not be comfortable sharing their gender, hence written unknown\n",
+        "df[\"Height\"] = df[\"Height\"].fillna(df[\"Height\"].mean())  # mean chosen because less chance of outliers, hence normal skewness\n",
+        "df[\"Weight\"] = df[\"Weight\"].fillna(df[\"Weight\"].mode()[0])  # mode chosen because it represents many people of the same weight. [0] given as mode can be of many values, so take the first mode.\n",
+        "df[\"Blood Type\"] = df[\"Blood Type\"].fillna(df[\"Blood Type\"].mode()[0]) # mode used to fill because max people have the same blood type.\n",
+        "df[\"BMI\"] = df[\"BMI\"].fillna(df[\"BMI\"].median())  # meadian chosen because there might contain outliers\n",
+        "df[\"Temperature\"] = df[\"Temperature\"].fillna(df[\"Temperature\"].median()) # median chosen because some may be outliers\n",
+        "df[\"Heart Rate\"] = df[\"Heart Rate\"].fillna(df[\"Heart Rate\"].mean())  #mean chosen because heart rate of every person is average at most times\n",
+        "df[\"Cholesterol\"] = df[\"Cholesterol\"].fillna(df[\"Cholesterol\"].mode()[0]) # mode chosen because taking the most common approach\n",
+        "df[\"Diabetes\"] = df[\"Diabetes\"].fillna(df[\"Diabetes\"].mode()[0]) # median chosen because some people might be outliers\n",
+        "df[\"Smoking\"] = df[\"Smoking\"].fillna(df[\"Smoking\"].mode()[0]) # mode chosen because people either smoke or not and there is no such thing called average/half smoking\n",
         "\n",
         "print(df.drop_duplicates())\n"
       ],
@@ -461,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o8reRwLJt7SJ",
-        "outputId": "501d1789-079d-4da8-ef7c-ee2b5156be29"
+        "outputId": "b0f3b416-0296-417c-d961-e2220327a9df"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,120 +489,19 @@
             " 12  Smoking         180000 non-null  object \n",
             "dtypes: float64(9), object(4)\n",
             "memory usage: 19.8+ MB\n",
-            "null value list:  list[Index(['Student ID', 'Age', 'Gender', 'Height', 'Weight', 'Blood Type', 'BMI',\n",
-            "       'Temperature', 'Heart Rate', 'Blood Pressure', 'Cholesterol',\n",
-            "       'Diabetes', 'Smoking'],\n",
-            "      dtype='object')]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1844822526.py:11: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Student ID\"].fillna(\"Unknown\", inplace=True)   # student id must be unique, hence given unknown\n",
-            "/tmp/ipython-input-1844822526.py:11: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Unknown' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-            "  df[\"Student ID\"].fillna(\"Unknown\", inplace=True)   # student id must be unique, hence given unknown\n",
-            "/tmp/ipython-input-1844822526.py:12: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Age\"].fillna(df[\"Age\"].median(), inplace=True)  # age is median as age may contain outliers that may make the central tendency skewed\n",
-            "/tmp/ipython-input-1844822526.py:13: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Gender\"].fillna(\"Unknown\", inplace=True)  # some people might not be comfortable sharing their gender, hence written unknown\n",
-            "/tmp/ipython-input-1844822526.py:14: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Height\"].fillna(df[\"Height\"].mean(), inplace=True)  # mean chosen because less chance of outliers, hence normal skewness\n",
-            "/tmp/ipython-input-1844822526.py:15: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Weight\"].fillna(df[\"Weight\"].mode()[0], inplace=True)  # mode chosen because it represents many people of the same weight. [0] given as mode can be of many values, so take the first mode.\n",
-            "/tmp/ipython-input-1844822526.py:16: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Blood Type\"].fillna(df[\"Blood Type\"].mode()[0], inplace=True) # mode used to fill because max people have the same blood type.\n",
-            "/tmp/ipython-input-1844822526.py:17: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"BMI\"].fillna(df[\"BMI\"].median(), inplace=True)  # meadian chosen because there might contain outliers\n",
-            "/tmp/ipython-input-1844822526.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Temperature\"].fillna(df[\"Temperature\"].median(), inplace=True) # median chosen because some may be outliers\n",
-            "/tmp/ipython-input-1844822526.py:19: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Heart Rate\"].fillna(df[\"Heart Rate\"].mean(), inplace=True)  #mean chosen because heart rate of every person is average at most times\n",
-            "/tmp/ipython-input-1844822526.py:20: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Cholesterol\"].fillna(df[\"Cholesterol\"].mode()[0], inplace=True) # mode chosen because taking the most common approach\n",
-            "/tmp/ipython-input-1844822526.py:21: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Diabetes\"].fillna(df[\"Diabetes\"].mode()[0], inplace=True) # median chosen because some people might be outliers\n",
-            "/tmp/ipython-input-1844822526.py:22: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df[\"Smoking\"].fillna(df[\"Smoking\"].mode()[0], inplace=True) # mode chosen because people either smoke or not and there is no such thing called average/half smoking\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "       Student ID   Age  Gender      Height     Weight Blood Type        BMI  \\\n",
-            "0             1.0  18.0  Female  161.777924  72.354947          O  27.645835   \n",
-            "1             2.0  26.0    Male  152.069157  47.630941          B  22.671401   \n",
-            "2             3.0  32.0  Female  182.537664  55.741083          A  16.729017   \n",
-            "3         Unknown  30.0    Male  182.112867  63.332207          B  19.096042   \n",
-            "4             5.0  23.0  Female  174.947103  46.234173          O  22.671401   \n",
-            "...           ...   ...     ...         ...        ...        ...        ...   \n",
-            "199995    Unknown  24.0    Male  176.503260  95.756997          B  30.737254   \n",
-            "199996    99997.0  29.0  Female  163.917675  45.225194          B  16.831734   \n",
-            "199997    99998.0  34.0  Female  174.947103  99.648914          B  33.189303   \n",
-            "199998    99999.0  30.0  Female  156.446944  50.142824          A  20.486823   \n",
-            "199999   100000.0  20.0  Female  153.927409  99.928405          O  42.175189   \n",
+            "null value list:  ['Student ID', 'Age', 'Gender', 'Height', 'Weight', 'Blood Type', 'BMI', 'Temperature', 'Heart Rate', 'Blood Pressure', 'Cholesterol', 'Diabetes', 'Smoking']\n",
+            "        Student ID   Age  Gender      Height     Weight Blood Type        BMI  \\\n",
+            "0              2.0  18.0  Female  161.777924  72.354947          O  27.645835   \n",
+            "1              3.0  26.0    Male  152.069157  47.630941          B  22.671401   \n",
+            "2              4.0  32.0  Female  182.537664  55.741083          A  16.729017   \n",
+            "3              4.0  30.0    Male  182.112867  63.332207          B  19.096042   \n",
+            "4              6.0  23.0  Female  174.947103  46.234173          O  22.671401   \n",
+            "...            ...   ...     ...         ...        ...        ...        ...   \n",
+            "199995     99996.0  24.0    Male  176.503260  95.756997          B  30.737254   \n",
+            "199996     99998.0  29.0  Female  163.917675  45.225194          B  16.831734   \n",
+            "199997     99999.0  34.0  Female  174.947103  99.648914          B  33.189303   \n",
+            "199998    100000.0  30.0  Female  156.446944  50.142824          A  20.486823   \n",
+            "199999    100001.0  20.0  Female  153.927409  99.928405          O  42.175189   \n",
             "\n",
             "        Temperature  Heart Rate  Blood Pressure  Cholesterol Diabetes Smoking  \n",
             "0         98.599654        95.0           109.0        203.0       No      No  \n",
@@ -617,7 +516,7 @@
             "199998    98.994212        61.0           106.0        225.0       No      No  \n",
             "199999    98.595817        95.0           133.0        132.0       No      No  \n",
             "\n",
-            "[188517 rows x 13 columns]\n"
+            "[188553 rows x 13 columns]\n"
           ]
         }
       ]
